# docker-surgeon

./: .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  example.env  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: dev-release.yml  release.yml  tests.yml
app/DAL/: database.py  models.py  repositories.py
app/DBMigrations/: env.py
app/DBMigrations/versions/: 2a3ad493a301_initial_schema.py  54631411a1b3_add_machine_column.py
app/agent/: __init__.py  agent_client.py  agent_runtime.py  agent_server.py
app/agent/services/: __init__.py  agent_service.py
app/agent/utils/: agent_logger.py
app/backend/api/: api_router.py
app/backend/api/routers/: auth.py  crashed_containers.py
app/backend/core/: __init__.py  agent_config.py  config.py  database.py  logger.py  password_utils.py  runtime.py  security.py  state.py
app/backend/events/: event.py
app/backend/models/: __init__.py  container.py  container_proxy.py  crashed_container.py  user.py
app/backend/notifications/: __init__.py  apprise_client.py  notification_manager.py
app/backend/providers/: __init__.py  agent_client_provider.py  container_provider.py  docker_client_provider.py
app/backend/repositories/: container_repository.py  crashed_container_repository.py  user_repository.py
app/backend/schemas/: chart_stats_schema.py  container_schema.py  crashed_container_schema.py  graph_stats_schema.py  user_schema.py
app/backend/services/: __init__.py  event_handler_service.py  monitor_service.py  notification_service.py  restart_service.py  stats_service.py
app/backend/tests/: conftest.py  test_config.py  test_conftest_direct.py  test_database_module.py  test_logger.py  test_password_utils.py  test_repositories.py  test_string_utils.py
app/backend/utils/: string_utils.py
app/dashboard/: index.html  package-lock.json  package.json
app/dashboard/src/: App.css  App.tsx  index.css
app/dashboard/src/api/: auth.ts  client.ts  crashedContainers.ts
app/dashboard/src/components/chart/: chart.tsx
app/dashboard/src/components/datepicker/: datepicker.tsx
app/dashboard/src/components/datepickerform/: datepickerform.tsx
app/dashboard/src/components/logsViewer/: logsviewer.tsx
app/dashboard/src/components/navbar/: navbar.tsx
app/dashboard/src/components/spinner/: spinner.tsx
app/dashboard/src/context/: auth.tsx
app/dashboard/src/models/: crashedContainer.ts
app/dashboard/src/pages/homepage/: index.tsx
app/dashboard/src/pages/login/: index.tsx
app/dashboard/src/utils/: utils.ts
app/utils/: config.py  logger.py
app/worker/: monitor_service.py
