[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-surgeon"
version = "1.4.2"
description = "Monitor and restart unhealthy, killed, or stopped Docker containers according to a user-defined restart policy, including any dependent containers."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  # ─────────────────────────────
  # FASTAPI CORE STACK
  # ─────────────────────────────
  "fastapi>=0.121,<1.0",
  "starlette>=0.49,<1.0",
  "uvicorn>=0.38,<1.0",
  "pydantic>=2.12,<3.0",
  "pydantic-core>=2.41,<3.0",

  # ─────────────────────────────
  # HTTP STACK
  # ─────────────────────────────
  "requests>=2.32",
  "httpx>=0.28",
  "httpcore>=1.0",
  "urllib3>=2.5",
  "certifi>=2025.0",
  "idna>=3.11",
  "charset-normalizer>=3.4",

  # ─────────────────────────────
  # AUTH / SECURITY
  # ─────────────────────────────
  "PyJWT>=2.12",
  "oauthlib>=3.3",
  "requests-oauthlib>=2.0",

  # ─────────────────────────────
  # ASYNC / SERVER SUPPORT
  # ─────────────────────────────
  "anyio>=4.11",
  "sniffio>=1.3",
  "h11>=0.16",
  "websockets>=15.0",
  "httptools>=0.7",
  "watchfiles>=1.1",

  # ─────────────────────────────
  # DATABASE / ORM
  # ─────────────────────────────
  "SQLAlchemy>=2.0,<3.0",
  "greenlet>=3.2",

  # ─────────────────────────────
  # CLI / UTILS
  # ─────────────────────────────
  "click>=8.3",
  "typer>=0.20,<1.0",
  "shellingham>=1.5",
  "rich>=14.0",
  "rich-toolkit>=0.15",
  "colorama>=0.4",

  # ─────────────────────────────
  # TEMPLATING / TEXT
  # ─────────────────────────────
  "Jinja2>=3.1",
  "MarkupSafe>=3.0",
  "Markdown>=3.10",
  "markdown-it-py>=4.0",
  "mdurl>=0.1",
  "Pygments>=2.19",

  # ─────────────────────────────
  # DATA / CONFIG
  # ─────────────────────────────
  "PyYAML>=6.0",
  "python-dotenv>=1.1",
  "pytz>=2025.2",
  "tzdata>=2025.2",

  # ─────────────────────────────
  # MISC / INTEGRATIONS
  # ─────────────────────────────
  "docker>=7.1",
  "apprise>=1.9",
  "sentry-sdk>=2.43",
  "dnspython>=2.8",
  "email-validator>=2.3",
  "argon2-cffi>=25.1",
  "argon2-cffi-bindings>=25.1",
  "bcrypt>=5.0",
  "cffi>=2.0",
  "pycparser>=2.23",

  # Windows only
  'pywin32==311; sys_platform == "win32"'
]

[project.urls]
Homepage = "https://github.com/kRYstall9/docker-surgeon"
Issues = "https://github.com/kRYstall9/docker-surgeon/issues"

[project.scripts]
agent = "app.main:run_agent"
server = "app.main:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]