[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-surgeon"
version = "1.4.2"
description = "Monitor and restart unhealthy, killed, or stopped Docker containers according to a user-defined restart policy, including any dependent containers."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  # ─────────────────────────────
  # FASTAPI CORE STACK
  # ─────────────────────────────
  "fastapi>=0.121,<1.0",
  "starlette>=0.49,<1.0",
  "uvicorn>=0.38,<1.0",
  "pydantic>=2.12,<3.0",
  "pydantic-core>=2.41,<3.0",
  # ─────────────────────────────
  # HTTP STACK
  # ─────────────────────────────
  "requests>=2.32",
  "httpx>=0.28",
  "httpcore>=1.0",
  "urllib3>=2.5",
  "certifi>=2025.0",
  "idna>=3.11",
  "charset-normalizer>=3.4",
  # ─────────────────────────────
  # AUTH / SECURITY
  # ─────────────────────────────
  "PyJWT>=2.12",
  "oauthlib>=3.3",
  "requests-oauthlib>=2.0",
  # ─────────────────────────────
  # ASYNC / SERVER SUPPORT
  # ─────────────────────────────
  "anyio>=4.11",
  "sniffio>=1.3",
  "h11>=0.16",
  "websockets>=15.0",
  "httptools>=0.7",
  "watchfiles>=1.1",
  # ─────────────────────────────
  # DATABASE / ORM
  # ─────────────────────────────
  "SQLAlchemy>=2.0,<3.0",
  "greenlet>=3.2",
  # ─────────────────────────────
  # CLI / UTILS
  # ─────────────────────────────
  "click>=8.3",
  "typer>=0.20,<1.0",
  "shellingham>=1.5",
  "rich>=14.0",
  "rich-toolkit>=0.15",
  "colorama>=0.4",
  # ─────────────────────────────
  # TEMPLATING / TEXT
  # ─────────────────────────────
  "Jinja2>=3.1",
  "MarkupSafe>=3.0",
  "Markdown>=3.10",
  "markdown-it-py>=4.0",
  "mdurl>=0.1",
  "Pygments>=2.19",
  # ─────────────────────────────
  # DATA / CONFIG
  # ─────────────────────────────
  "PyYAML>=6.0",
  "python-dotenv>=1.1",
  "pytz>=2025.2",
  "tzdata>=2025.2",
  # ─────────────────────────────
  # MISC / INTEGRATIONS
  # ─────────────────────────────
  "docker>=7.1",
  "apprise>=1.9",
  "sentry-sdk>=2.43",
  "dnspython>=2.8",
  "email-validator>=2.3",
  "argon2-cffi>=25.1",
  "argon2-cffi-bindings>=25.1",
  "bcrypt>=5.0",
  "cffi>=2.0",
  "pycparser>=2.23",
  # Windows only
  'pywin32==311; sys_platform == "win32"',
  "alembic>=1.18.5",
]

[project.urls]
Homepage = "https://github.com/kRYstall9/docker-surgeon"
Issues = "https://github.com/kRYstall9/docker-surgeon/issues"

[project.scripts]
agent = "app.main:run_agent"
server = "app.main:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/app/DBMigrations"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"
# Or organize into date-based subdirectories (requires recursive_version_locations = true)
# file_template = "%%(year)d/%%(month).2d/%%(day).2d_%%(hour).2d%%(minute).2d_%%(second).2d_%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

[dependency-groups]
dev = [
    "alembic>=1.18.5",
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"

